<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_login">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.spendlyze.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard" />

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.example.spendlyze.ui.transactions.TransactionsFragment"
        android:label="@string/title_transactions" />

    <fragment
        android:id="@+id/navigation_analysis"
        android:name="com.example.spendlyze.ui.analysis.AnalysisFragment"
        android:label="@string/title_analysis" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.spendlyze.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.spendlyze.ui.auth.LoginFragment"
        android:label="Login">
        <action
            android:id="@+id/action_login_to_signup"
            app:destination="@id/navigation_signup" />
        <action
            android:id="@+id/action_login_to_dashboard"
            app:destination="@id/navigation_dashboard"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_signup"
        android:name="com.example.spendlyze.ui.auth.SignUpFragment"
        android:label="Sign Up">
        <action
            android:id="@+id/action_signup_to_login"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_signup_to_dashboard"
            app:destination="@id/navigation_dashboard"
            app:popUpTo="@id/navigation_signup"
            app:popUpToInclusive="true" />
    </fragment>

    <action
        android:id="@+id/action_settings_to_login"
        app:destination="@id/navigation_login"
        app:popUpTo="@id/navigation_settings"
        app:popUpToInclusive="true" />

</navigation> 